--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@codemirror/theme-one-dark": "^0.19.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
+    "jsonc": "^2.0.0",
+    "jsoncomp": "^1.6.1",
     "lit": "^2.0.0",
     "lit-analyzer": "^1.2.1",
     "tslib": "2.3.1"
@@ -39,7 +41,7 @@
     "@web/dev-server": "^0.1.28",
     "@web/dev-server-esbuild": "^0.2.16",
     "@web/test-runner": "^0.13.22",
-    "eslint": "^8.4.1",
+    "eslint": "8.22.0",
     "prettier": "^2.5.1",
     "tslib": "2.3.1",
     "typescript": "4.5.2"
